<resources>
    <string name="app_name">Olá Android</string>
    <string name="login">Login</string>
    <string name="se">Password</string>
    <string name="enviar">to send</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="sexo">Sex</string>
    <string name="feminino">Feminine</string>
    <string name="cadastro">Register</string>
    <string name="dglogin">Enter your Login</string>
    <string name="masculino">Masculine</string>
    <string name="aceito">I accept the terms of use</string>
    <string name="cadastrar">REGISTER</string>
    <string name="esqueci">I forgot my password</string>
</resources>